2.5
- New icons
- Added GitHubFlow features
- Improved repo credentials 

2.3.2
- Added buttons to GitFlow output window
	- Resolve button when conflicts are detected
	- Show changes button when uncommitted changes are detected

2.1
- Added Sync option

2.0
- Added Resolve option
- Fixed bug in the "Diff with previous version" feature

1.9
- Added Start/Finish hotfix gitflow options

1.8.3
- Fix bug with entering repo credentials

1.8.2
- Fix bug with entering repo credentials

1.8.1
- Fix bug with Finish release command

1.8
- Code cleanup
- Fixed bug with commit messages
- Fixed bug with Finish release command
- TortoiseGit does not need to be in your PATH anymore
- MSysGit does not need to be in your PATH anymore

1.7.6
- Added Start/Finish release gitflow options
- Improved Gitflow output
- Prompt for missing username and email
- When saving files also save solution and project files

1.6.1
- Menu title changes to fit VS style
- Apply Stash only enabled when stashes are available
- Configurable default commit message (https://msdn.microsoft.com/en-us/library/c02as0cs.aspx)

1.5
- Save files before using a GIT function

1.4
- Improved foolproofing
- Added Visual Studio 2015 CTP support

1.3
- Small bugfixes

1.2
- Improved Gitflow output

1.1.1
- Improved Gitflow features
- Fixed bug in the "Diff with previous version" feature
- Added option screen to set the develop and feature branch name
- Added Visual Studio 14 CTP support

1.0
- First public version